MON-27 (part of): Ensure proper ownership of a machine to put a probe on it.
"PUT /pub/monitors/:monitor/probes/:name" checks (MAPI) that the given
machine is owned by the monitor owner. Also update the test suite to use
real machine/user values.

--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,7 @@
     not always have it or want to use it instead of other operator accounts.
     Perhaps a "sdc-monitoring" tool (monadm? amonadm?) to add canned sets of
     monitors and probes?
+- node 0.6
 
 
 # todo
